# DataStream

./: .gitignore  CMakeLists.txt  readme.md
data-stream/: file_reader.hpp  sock_reader.hpp  stream_reader.hpp
scripts/: deploy.bat  deploy.sh  fft_opt.py  gen_tst_file.py  gen_tst_file2.py  gen_tst_udp_test_stream.py
tests/: bench_fread.cpp  test_file_reader.cpp  test_sock_reader.cpp
